--- a/TaskManagerCleanArchitecture.Persistence/TaskManagerCleanArchitecture.Persistence.csproj
+++ b/TaskManagerCleanArchitecture.Persistence/TaskManagerCleanArchitecture.Persistence.csproj
@@ -1,19 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <Folder Include="Repositories\"/>
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6"/>
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\TaskManagerCleanArchitecture.Application\TaskManagerCleanArchitecture.Application.csproj"/>
+  </ItemGroup>
 </Project>
