--- a/TaskManagerCleanArchitecture.Api/appsettings.json
+++ b/TaskManagerCleanArchitecture.Api/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Mysql":  "server=localhost;database=taskmanager;user=fredchess;password="
+    "Mysql": "server=localhost;database=taskmanager;user=fredchess;password="
+  },
+  "Jwt": {
+    "Key": "app-super-secret-key-8Ut4GgJxpFXNzkyYaPg5uXVwO0hBsQnb0Pdc1af265c21c97"
   }
 }
