--- a/TaskManagerCleanArchitecture.Infrastructure/TaskManagerCleanArchitecture.Infrastructure.csproj
+++ b/TaskManagerCleanArchitecture.Infrastructure/TaskManagerCleanArchitecture.Infrastructure.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TaskManagerCleanArchitecture.Application\TaskManagerCleanArchitecture.Application.csproj" />
   </ItemGroup>
 </Project>
