--- a/TaskManagerCleanArchitecture.Persistence/TaskManagerCleanArchitecture.Persistence.csproj
+++ b/TaskManagerCleanArchitecture.Persistence/TaskManagerCleanArchitecture.Persistence.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1"/>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6"/>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TaskManagerCleanArchitecture.Application\TaskManagerCleanArchitecture.Application.csproj"/>
